# discourse-scraper

./: .gitignore  README.md  env.yml  env_only_RAG.yml  pyproject.toml
biogpt/: fine-tune.ipynb
data/: conversations-galaxy-q-a.csv
disclosure_scraper/: __init__.py  __main__.py
discourse_data_model/: __init__.py
extract_documents/: create_RAG_docs.ipynb  extract_from_GTN.ipynb  extract_from_GitHub.ipynb
llama2/: RAG_Mixtral.ipynb  RAG_generate_from_checkpoints.ipynb  fine-tune-qlora.ipynb  fine-tune.ipynb  generate_from_checkpoints.ipynb  optimise_hyperparamters_llm.ipynb  prepare-dataset-all-conv.ipynb  prepare-dataset-q-a.ipynb  prepare-dataset.ipynb  qlora-train.py  reload_fine_tuned_model.ipynb  run_tensorboard.ipynb  save_to_hub.ipynb  test-llama2.ipynb
